--- a/src/main/resources/com/example/kursov_project/auteurist.fxml
+++ b/src/main/resources/com/example/kursov_project/auteurist.fxml
@@ -8,11 +8,12 @@
    <children>
       <PasswordField fx:id="passField" layoutX="70.0" layoutY="149.0" prefHeight="26.0" prefWidth="200.0" promptText="Password" />
       <TextField fx:id="loginField" layoutX="70.0" layoutY="109.0" prefHeight="26.0" prefWidth="200.0" promptText="Login" />
-      <Button fx:id="authorization" layoutX="81.0" layoutY="219.0" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="26.0" prefWidth="172.0" text="Authorization" />
+      <Button fx:id="authorization" layoutX="81.0" layoutY="203.0" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="26.0" prefWidth="172.0" text="Authorization" />
       <Label layoutX="12.0" layoutY="44.0" prefHeight="35.0" prefWidth="325.0" text="RestoranSystem Authorization">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
+      <Button layoutX="81.0" layoutY="240.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="172.0" text="Regestation" />
    </children>
 </AnchorPane>
